# bedrock-agents-defaults

./: .gitignore  README.md  SPECS.md  app.py  cdk.json  pyproject.toml
instructions/: broken.txt  fixed.txt
lambdas/account_performance/: handler.py
schemas/: account_performance.yaml
stacks/: agent_stack.py  compute_stack.py
tests/: test_agent_stack.py
